Fixed overflow bug

--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -7,6 +7,7 @@
 }
 body {
   background-image: url(../images/memphis-colorful2.png);
+  overflow-x: hidden;
 }
 p,
 h2,
